2007-01-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex.el (TeX-command-default): Mark as safe-local-variable.

2006-12-30  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (Folding): Document user-visible changes in the
	folding functionality.

2006-12-29  Ralf Angeli  <angeli@caeruleus.net>

	* tex-info.el (TeX-texinfo-mode): Set `comment-use-syntax'.

	* tex-fold.el: Update author email address.
	(TeX-fold-type-list): New variable.
	(TeX-fold-keymap): Add key binding for `TeX-fold-comment'.
	(TeX-fold-dwim): Try to fold comment as well.
	(TeX-fold-region): Move implementation of region folding for
	macros and environments out into the new function
	`TeX-fold-region-macro-or-env' and cater for comments as well.
	(TeX-fold-region-macro-or-env, TeX-fold-region-comment)
	(TeX-fold-comment, TeX-fold-comment-do): New functions.

	* latex.el (LaTeX-common-initialization): Set
	`TeX-search-forward-comment-start-function'.
	(LaTeX-fill-region-as-para-do, LaTeX-fill-paragraph)
	(LaTeX-fill-code-comment): Call `TeX-search-forward-comment-start'
	instead of `LaTeX-search-forward-comment-start'.

	* tex.el (VirTeX-common-initialization): Set `comment-end-skip'
	and `comment-use-syntax'.
	(TeX-fold-menu): Add entry for folding comments.
	(TeX-comment-forward): New compatibility function.
	(TeX-comment-or-uncomment-region): Use it.
	(TeX-search-forward-comment-start-function): New variable.
	(TeX-search-forward-comment-start): New function.

2006-12-10  David Kastrup  <dak@gnu.org>

	* latex.el (LaTeX-section-hook): Place into `LaTeX-macro' group.
	(LaTeX-verbatim-macros-with-delims)
	(LaTeX-verbatim-macros-with-braces): Same here.
	(LaTeX-verbatim-environments): Place into `LaTeX-environment'
	group.

2006-12-07  Ralf Angeli  <angeli@caeruleus.net>

	* tex-bar.el (TeX-install-toolbar, LaTeX-install-toolbar): Add
	`toolbarx-refresh' to `TeX-PDF-mode-hook' in the current buffer
	only.

2006-12-06  Ralf Angeli  <angeli@caeruleus.net>
